--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>FizzBuzz</title>
 </head>
 <body>
-    <div class="app d-flex flex-wrap justify-content-center align-content-center "></div>
+    <h1 class="text-center ">FizzFuzz</h1>
+    <div class="app d-flex flex-wrap justify-content-center align-content-center"></div>
 
     <script src="js/script.js"></script>
 </body>
