(js) add text in colContainer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <h1 class="text-center">FizzFuzz</h1>
-    <div class="container d-flex flex-wrap justify-content-center align-content-center" id="section1"></div>
+    <div class="container-fluid d-flex flex-wrap justify-content-center align-content-center" id="section1"></div>
     <div class="app d-flex flex-wrap justify-content-center align-content-center"></div>
 
     <script src="js/script.js"></script>
