--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <title>FizzBuzz</title>
@@ -16,8 +19,8 @@
 
 <body>
     <h1 class="text-center">FizzFuzz</h1>
-    <div class="container-fluid d-flex flex-wrap justify-content-center align-content-center" id="section1"></div>
-    <div class="app d-flex flex-wrap justify-content-center align-content-center"></div>
+    <div class="container-fluid flex-wrap justify-content-center align-content-center" id="section1"></div>
+    <div class="app m-5 d-flex flex-wrap justify-content-center align-content-center"></div>
 
     <script src="js/script.js"></script>
 </body>
