(html) fix h1 element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1 class="text-center">FizzFuzz</h1>
+    <h1 class="text-center">FizzBuzz</h1>
     <div class="container-fluid flex-wrap justify-content-center align-content-center" id="section1"></div>
     <div class="app m-5 d-flex flex-wrap justify-content-center align-content-center"></div>
 
